--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "webp-converter": "2.2.3",
     "webpack": "latest",
     "webpack-stream": "latest"
+  },
+  "dependencies": {
+    "swiper": "^9.2.4"
   }
 }
